# controller

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.dpsim  Dockerfile.generic  MANIFEST.in  README.md  REUSE.toml  cmd.bat  config.json  config.json.dpsim  config.json.generic  config.py  docker-compose.yaml  docker-compose.yml  listener.py  pyproject.toml  requirements.txt  run.bat  run.py  setup.py  start.sh  start_k8s.sh  test_k8s.sh  villas-controller.service  villasctl.py
doc/: openapi.yaml
etc/: config.json  config.yaml  config_dpsim.json  config_dpsim.yaml  config_k8s.json  config_k8s.yaml  config_node.json  config_node.yaml  config_simplekub.yaml  config_villas.json  config_villas.yaml  params_k8s_create.yaml  params_k8s_dpsim.yaml  params_simplekub.yaml
params/: params.yaml  params_k8s.yaml
tests/: __init__.py  test_config.py
tests/kubernetes/: Dockerfile  entrypoint.sh
villas/amqp/: __init__.py  channel.py  connection.py  publisher.py  subscriber.py
villas/controller/: __init__.py  api.py  command.py  component.py  config.py  controller.py  discovery.py  dpsim_simulator.py  exceptions.py  main.py  model.py  rscad_model.py  rscad_simulator.py  rtlab_model.py  rtlab_simulator.py  simulator.py  status_consumer.py  status_publisher.py  util.py
villas/controller/commands/: __init__.py  daemon.py  model.py  monitor.py  result.py  simulator.py
villas/controller/components/: controller.py  gateway.py  manager.py  simulator.py
villas/controller/components/controllers/: kubernetes.py  playback.py  villas_node.py  villas_relay.py
villas/controller/handlers/: component.py  health.py  main.py
villas/controller/models/: cim.py  rtlab.py
villas/controller/simulators/: dpsim.py  dummy.py  generic.py  rtds.py  rtlab.py
(+23 files in other folders)
